NEW IN WAF 1.6.0
----------------

* syntax changes